Bug 1189108 - Walk up tree to get LinkableAccessible actions instead of caching r=tbsaunde